--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<h1>Success Event Loop</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Success Event Loop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="styles/buttons.css" rel="stylesheet" type="text/css">
+    <link href="styles/task.css" rel="stylesheet" type="text/css">
+</head>
+
+<body id="body">
+
+<div class="container mt-4">
+    <h1 class="mb-4">Success Event Loop</h1>
+
+    <div class=" mb-5">
+        <div class="col d-flex justify-content-start" id="buttons-container"></div>
+    </div>
+</div>
+
+
+<!--- CONTENT: -->
+<div class="container mt-4">
+    <div class="" id="pages-container"></div>
+    <table class="table table-striped table-bordered w-100">
+            <thead>
+            <tr>
+                <th>Тип:</th>
+                <th>Назва задачі:</th>
+                <th>Вигода:</th>
+                <th>Мін. час:</th>
+                <th>Сер. час:</th>
+                <th>К-ть:</th>
+                <th>Таймер:</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><span class="task-section-label" data-section="blockers">BLOCKER</span></td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+
+            </tr>
+        </tbody> 
+    </table>
+</div>
+<!--- /CONTENT -->
+
+
+
+
+
+<!--- FOOTER: -->
+<div class="container mt-4 border-top pt-4">
+    <div class="col">
+
+    </div>
+    <div class="col" id="emmet"></div>
+</div>
+<!--- /FOOTER -->
+
+
+
+    <script src="src/form.js"></script>
+    <script src="src/buttons.js"></script>
+    <script src="src/div.js"></script>
+
+    <script src="src/config.js"></script>
+    <script src="src/db.js"></script>
+    <script src="src/card.js"></script>
+    <script src="src/memory.js"></script>
+
+    <script src="src/render.js"></script>
+    <script src="src/app.js"></script>
+    <script src="src/emmet.js"></script>
+
+
+    <script src="src/test/5kb.js"></script>
+    <script src="src/test/20kb.js"></script>
+
+</body>
+
+
+</html>
