--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <script src="src/test/5kb.js"></script>
     <script src="src/test/20kb.js"></script>
+    <script src="src/test/50kb.js"></script>
 
 </body>
 
