--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="body">
 
 <div class="container mt-4">
-    <h1 class="mb-4">Success Event Loop</h1>
+    <h1 class="mb-4"><a href="https://gu82pp.github.io/success_event_loop/">Success Event Loop</a></h1>
 
     <div class=" mb-5">
         <div class="col d-flex justify-content-start" id="buttons-container"></div>
@@ -68,18 +68,20 @@
 
 
 
+    <script src="src/config.js"></script>
+    <script src="src/db.js"></script>
+    <script src="src/task.js"></script>
+
     <script src="src/form.js"></script>
     <script src="src/buttons.js"></script>
     <script src="src/div.js"></script>
 
-    <script src="src/config.js"></script>
-    <script src="src/db.js"></script>
     <script src="src/card.js"></script>
     <script src="src/memory.js"></script>
 
     <script src="src/render.js"></script>
     <script src="src/app.js"></script>
-    <script src="src/emmet.js"></script>
+    <!-- <script src="src/emmet.js"></script> -->
 
 
     <script src="src/test/5kb.js"></script>
