--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
 
 
+    <script src="src/utils/Uuid.js"></script>
+    <script src="src/utils/World.js"></script>
+    <script src="src/debugger.js"></script>
     <script src="src/config.js"></script>
     <script src="src/db.js"></script>
     <script src="src/task.js"></script>
@@ -83,10 +86,6 @@
     <script src="src/app.js"></script>
     <!-- <script src="src/emmet.js"></script> -->
 
-
-    <script src="src/test/5kb.js"></script>
-    <script src="src/test/20kb.js"></script>
-    <script src="src/test/50kb.js"></script>
 
 </body>
 
