--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Success Event Loop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="styles/buttons.css" rel="stylesheet" type="text/css">
     <link href="styles/task.css" rel="stylesheet" type="text/css">
 </head>
@@ -62,9 +62,17 @@
     <div class="col">
 
     </div>
-    <div class="col" id="emmet"></div>
+    <div class="col" id="memory_stats"></div>
 </div>
 <!--- /FOOTER -->
+
+
+<!---COMPONENTS -->
+<script src="src/components/TaskList.js"></script>
+<script src="src/components/NewTask.js"></script>
+<script src="src/components/EditTask.js"></script>
+
+<!--- /COMPONENTS -->
 
 
 
