create dom element

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 
     <script src="src/utils/Uuid.js"></script>
     <script src="src/utils/World.js"></script>
+    <script src="src/utils/switchAnimation.js"></script>
+    <script src="src/utils/createDomElement.js"></script>
+
+
     <script src="src/debugger.js"></script>
     <script src="src/config.js"></script>
     <script src="src/db.js"></script>
@@ -90,10 +94,12 @@
     <script src="src/card.js"></script>
     <script src="src/memory.js"></script>
 
+    <script src="src/components/Buttons.js"></script>
+    <script src="src/components/Table.js"></script>
+
     <script src="src/render.js"></script>
     <script src="src/app.js"></script>
     <!-- <script src="src/emmet.js"></script> -->
-
 
 </body>
 
