--- a/index.html
+++ b/index.html
@@ -13,47 +13,8 @@
 
 <body id="body">
 
-<div class="container mt-4">
-    <h1 class="mb-4"><a href="https://gu82pp.github.io/success_event_loop/">Success Event Loop</a></h1>
-
-    <div class=" mb-5">
-        <div class="col d-flex justify-content-start" id="buttons-container"></div>
+    <div class="container mt-4" id="page">
     </div>
-</div>
-
-
-<!--- CONTENT: -->
-<div class="container mt-4">
-    <div class="" id="pages-container"></div>
-    <table class="table table-striped table-bordered w-100">
-            <thead>
-            <tr>
-                <th>Тип:</th>
-                <th>Назва задачі:</th>
-                <th>Вигода:</th>
-                <th>Мін. час:</th>
-                <th>Сер. час:</th>
-                <th>К-ть:</th>
-                <th>Таймер:</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><span class="task-section-label" data-section="blockers">BLOCKER</span></td>
-                <td>...</td>
-                <td>...</td>
-                <td>...</td>
-                <td>...</td>
-                <td>...</td>
-                <td>...</td>
-
-            </tr>
-        </tbody> 
-    </table>
-</div>
-<!--- /CONTENT -->
-
-
 
 
 
@@ -66,13 +27,6 @@
 </div>
 <!--- /FOOTER -->
 
-
-<!---COMPONENTS -->
-<script src="src/components/TaskList.js"></script>
-<script src="src/components/NewTask.js"></script>
-<script src="src/components/EditTask.js"></script>
-
-<!--- /COMPONENTS -->
 
 
 
@@ -88,7 +42,6 @@
     <script src="src/task.js"></script>
 
     <script src="src/form.js"></script>
-    <script src="src/buttons.js"></script>
     <script src="src/div.js"></script>
 
     <script src="src/card.js"></script>
@@ -97,9 +50,8 @@
     <script src="src/components/Buttons.js"></script>
     <script src="src/components/Table.js"></script>
 
-    <script src="src/render.js"></script>
     <script src="src/app.js"></script>
-    <!-- <script src="src/emmet.js"></script> -->
+
 
 </body>
 
